// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Info Block matches the snapshot 1`] = `
.c0 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    className="sc-bwzfXH eNmxcA"
  >
    <div
      className="c0 sc-htpNat dszOpy"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="14px"
    >
      The Future of Art
    </div>
    <div
      className="sc-bxivhb bUZGRr sc-htpNat deJBsu"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="14px"
    >
      02:28
    </div>
  </div>
  <div
    className="sc-bxivhb bUZGRr sc-htpNat kUuHSn"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize="42px"
  >
    Trevor Paglan
  </div>
</div>
`;

exports[`Video Info Block matches the snapshot with edit props 1`] = `
.c0 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    className="sc-bwzfXH eNmxcA"
  >
    <div
      className="c0 sc-htpNat dszOpy"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="14px"
    >
      The Future of Art
    </div>
    <div
      className="sc-bxivhb bUZGRr sc-htpNat deJBsu"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="14px"
    >
      02:28
    </div>
  </div>
  <div
    className="sc-bxivhb bUZGRr sc-htpNat kUuHSn"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize="42px"
  >
    <div>
      Child 
      title
    </div>
  </div>
</div>
`;
